Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Serialization to string optimization
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-